# JohnCenterFind

./: CMakeLists.txt
include/: CenterFindEngine.h
source/: CenterFindEngine.cpp  main.cpp
